# Credit-Card-Fraud-Detection

./: .dockerignore  .env.example  .flake8  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCKER_COMMANDS.md  DOCKER_DEPLOYMENT_SUMMARY.md  DOCKER_GUIDE.md  Dockerfile  ENHANCEMENTS_SUMMARY.md  FINAL_SETUP.md  FULLSTACK_SETUP.md  ML_EXPERT_DEPLOYMENT.md  Makefile  PREMIUM_UI_PLAN.md  PROFESSIONAL_SETUP_COMPLETE.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_DEPLOY.md  QUICK_START.md  QUICK_TEST_DATA.txt  README.md  RUN_ME_FIRST.md  SECURITY.md  SETUP_COMPLETE.md  STRUCTURE.md  SYSTEM_COMPLETE.md  TEST_DATA.md  TROUBLESHOOTING.md  WORKING_NOW.md  create_demo_model.py  create_real_model.py  deploy.bat  deploy.sh  (+12 more)
.github/: PULL_REQUEST_TEMPLATE.md
apis/: __init__.py
backend/: README.md  credit_card_fraud_detection.ipynb  requirements.txt
config/: config.yaml
core/: config.py  logging.py
data/: .gitkeep
docker/: Dockerfile.api  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  SETUP.md
frontend/: .dockerignore  .env.example  .env.local.example  Dockerfile  README.md  build_log.txt  build_log2.txt  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
models/: .gitkeep
notebooks/: .gitkeep
outputs/: .gitkeep
reports/: model_report.json
scripts/: __init__.py  evaluate.py  predict.py  train.py  verify_setup.py
src/: __init__.py  data_loader.py  evaluation.py  explainability.py  models.py  (+3 more)
(+65 files in other folders)
